--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_plugin_bbd_base:
+  flutter_plugin_bbd_base: ^0.1.0
 
 dev_dependencies:
   flutter_test:
