--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>flutter.bbd.application.example</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>flutter_plugin_bbd_application_example</string>
+	<string>flutter.bbd.application.example</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -24,12 +24,12 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>de.oliverzernikow.flutterPluginBbdApplicationExample</string>
+			<string>flutter.bbd.application.example</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>de.oliverzernikow.flutterPluginBbdApplicationExample.sc2</string>
-				<string>de.oliverzernikow.flutterPluginBbdApplicationExample.sc2.1.0.0.0</string>
-				<string>de.oliverzernikow.flutterPluginBbdApplicationExample.sc3</string>
+				<string>flutter.bbd.application.example.sc2</string>
+				<string>flutter.bbd.application.example.sc2.1.0.0.0</string>
+				<string>flutter.bbd.application.example.sc3</string>
 				<string>com.good.gd.discovery</string>
 			</array>
 		</dict>
@@ -37,21 +37,21 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GDApplicationID</key>
-	<string>com.enterprise.id</string>
+	<string>flutter.bbd.application.example</string>
 	<key>GDApplicationVersion</key>
 	<string>1.0.0.0</string>
 	<key>GDLibraryMode</key>
 	<string>GDEnterpriseSimulation</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSMainStoryboardFile</key>
-	<string></string>
-	<key>NSFaceIDUsageDescription</key>
-	<string>Wird benötigt</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Wird benötigt</string>
+	<key>NSMainStoryboardFile</key>
+	<string></string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
